[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aimarket-auction"
version = "2.0.0"
description = "Spot bidding market — real-time bid/ask for AI tasks"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["aimarket-hub>=2.0.0"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.entry-points."aimarket.plugins"]
auction = "aimarket_auction.plugin:AuctionPlugin"

[tool.setuptools.packages.find]
include = ["aimarket_auction*"]
