[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aimarket-dataset"
version = "2.0.0"
description = "Weekly anonymized invocation corpus exporter (open data)"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["aimarket-hub>=2.0.0"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.entry-points."aimarket.plugins"]
dataset = "aimarket_dataset.plugin:DatasetPlugin"

[tool.setuptools.packages.find]
include = ["aimarket_dataset*"]
