[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aimarket-nft"
version = "2.0.0"
description = "Tokenized pre-paid credits, transferable between owners"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["aimarket-hub>=2.0.0"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.entry-points."aimarket.plugins"]
nft = "aimarket_nft.plugin:NFTPlugin"

[tool.setuptools.packages.find]
include = ["aimarket_nft*"]
