[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aimarket-promo"
version = "2.0.0"
description = "Signed time-locked offers and discounts for AI capabilities"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["aimarket-hub>=2.0.0"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.entry-points."aimarket.plugins"]
promo = "aimarket_promo.plugin:PromoPlugin"

[tool.setuptools.packages.find]
include = ["aimarket_promo*"]
