[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aimarket-reputation"
version = "2.0.0"
description = "Stake-bond + signed reputation events with on-chain settlement"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["aimarket-hub>=3.0.0"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.entry-points."aimarket.plugins"]
reputation = "aimarket_reputation.plugin:ReputationPlugin"

[tool.setuptools.packages.find]
include = ["aimarket_reputation*"]
