[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aimarket-streaming"
version = "2.0.0"
description = "SSE/WS streaming + per-chunk billing with micro-receipts"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["aimarket-hub>=2.0.0"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.entry-points."aimarket.plugins"]
streaming = "aimarket_streaming.plugin:StreamingPlugin"

[tool.setuptools.packages.find]
include = ["aimarket_streaming*"]
