[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aimarket-zk"
version = "2.0.0"
description = "ZK input/output proofs for privacy-preserving capability invocation"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["aimarket-hub>=2.0.0"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.entry-points."aimarket.plugins"]
zk = "aimarket_zk.plugin:ZKPlugin"

[tool.setuptools.packages.find]
include = ["aimarket_zk*"]
